회원 관리 시스템 - DB 권한 실시간 반영 오류 수정